--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -182,6 +182,123 @@
     "    \"penjualan_dqmart_01-beta_normalized.csv\"\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e3c06cfe-aad3-4e04-a4aa-cdd0482e455c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Standarisasi tanggal selesai. File hasil: penjualan_dqmart_01_normalized.xlsx\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+      "/tmp/ipykernel_6594/1659880801.py:50: UserWarning: The argument 'infer_datetime_format' is deprecated and will be removed in a future version. A strict version of it is now the default, see https://pandas.pydata.org/pdeps/0004-consistent-to-datetime-parsing.html. You can safely remove this argument.\n",
+      "  dt = pd.to_datetime(s, errors='coerce', dayfirst=dayfirst, infer_datetime_format=True)\n",
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+      "/tmp/ipykernel_6594/1659880801.py:61: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "# Fungsi utama untuk menstandarkan penulisan tanggal pada file Excel transaksi\n",
+    "def normalize_tanggal_transaksi(input_xlsx_path: str, output_xlsx_path: str) -> None:\n",
+    "    # Baca file Excel sesuai instruksi (sheet: transaksi)\n",
+    "    df = pd.read_excel(input_xlsx_path, sheet_name='transaksi', dtype=str)\n",
+    "\n",
+    "    # Mapping nama bulan dalam Bahasa Indonesia ke Bahasa Inggris\n",
+    "    # supaya bisa dikenali oleh pandas.to_datetime()\n",
+    "    bulan_map = {\n",
+    "        'januari': 'January', 'jan': 'January',\n",
+    "        'februari': 'February', 'feb': 'February',\n",
+    "        'maret': 'March', 'mar': 'March',\n",
+    "        'april': 'April', 'apr': 'April',\n",
+    "        'mei': 'May', 'mei.': 'May',\n",
+    "        'juni': 'June', 'jun': 'June',\n",
+    "        'juli': 'July', 'jul': 'July',\n",
+    "        'agustus': 'August', 'agu': 'August', 'aug': 'August',\n",
+    "        'september': 'September', 'sep': 'September',\n",
+    "        'oktober': 'October', 'okt': 'October', 'oct': 'October',\n",
+    "        'november': 'November', 'nov': 'November',\n",
+    "        'desember': 'December', 'des': 'December', 'dec': 'December'\n",
+    "    }\n",
+    "\n",
+    "    # Fungsi kecil untuk membersihkan dan menormalkan format tanggal\n",
+    "    def parse_date(val):\n",
+    "        if pd.isna(val):\n",
+    "            return val\n",
+    "        s = str(val).strip()\n",
+    "\n",
+    "        # Hapus karakter yang sering bikin parsing gagal\n",
+    "        s = re.sub(r\"[,’‘’]\", \" \", s)\n",
+    "        s = s.replace(\",\", \" \")\n",
+    "        s = re.sub(r\"\\s+\", \" \", s)\n",
+    "\n",
+    "        # Ubah nama bulan lokal (Indonesia) ke format Inggris\n",
+    "        s = \" \".join([bulan_map.get(w.lower(), w) for w in s.split()])\n",
+    "\n",
+    "        # Ubah tahun dua digit seperti '24 menjadi 2024\n",
+    "        s = re.sub(r\"'\\s*(\\d{2})(?!\\d)\", r\"20\\1\", s)\n",
+    "\n",
+    "        # Tangani pola seperti \"2024, 6 Nov\" agar jadi \"6 Nov 2024\"\n",
+    "        match = re.match(r\"^(\\d{4})\\s*,\\s*(\\d{1,2})\\s+([A-Za-z]+)\", s)\n",
+    "        if match:\n",
+    "            s = f\"{match.group(2)} {match.group(3)} {match.group(1)}\"\n",
+    "\n",
+    "        # Coba parse dengan dua kemungkinan format (day first dan month first)\n",
+    "        for dayfirst in (True, False):\n",
+    "            dt = pd.to_datetime(s, errors='coerce', dayfirst=dayfirst, infer_datetime_format=True)\n",
+    "            if pd.notna(dt):\n",
+    "                return dt.strftime(\"%d-%m-%Y\")\n",
+    "\n",
+    "        # Kalau gagal diparse, kembalikan nilai aslinya\n",
+    "        return val\n",
+    "\n",
+    "    # Deteksi otomatis kolom yang isinya tanggal\n",
+    "    # (dicek berdasarkan 10 sampel pertama di tiap kolom)\n",
+    "    for col in df.columns:\n",
+    "        sample = df[col].dropna().astype(str).head(10)\n",
+    "        if pd.to_datetime(sample, errors='coerce', dayfirst=True).notna().sum() >= 3:\n",
+    "            df[col] = df[col].apply(parse_date)\n",
+    "\n",
+    "    # Simpan hasil ke Excel baru dengan struktur kolom tetap sama\n",
+    "    df.to_excel(output_xlsx_path, index=False, sheet_name='transaksi')\n",
+    "\n",
+    "    print(f\"✅ Standarisasi tanggal selesai. File hasil: {output_xlsx_path}\")\n",
+    "\n",
+    "\n",
+    "# Eksekusi utama\n",
+    "if __name__ == \"__main__\":\n",
+    "    # File input dan output sesuai instruksi hackathon\n",
+    "    normalize_tanggal_transaksi(\n",
+    "        \"penjualan_dqmart_01-beta.xlsx\",\n",
+    "        \"penjualan_dqmart_01_normalized.xlsx\"\n",
+    "    )\n"
+   ]
   }
  ],
  "metadata": {
