--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -299,6 +299,85 @@
     "        \"penjualan_dqmart_01_normalized.xlsx\"\n",
     "    )\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "23690959-5a9e-4d09-82e3-7290edf6df5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def normalize_tanggal_transaksi(input_xlsx_path: str, output_xlsx_path: str) -> None:\n",
+    "    # Baca file Excel\n",
+    "    df = pd.read_excel(input_xlsx_path, sheet_name='transaksi', dtype=str)\n",
+    "\n",
+    "    # Pemetaan bulan Indonesia dan Inggris\n",
+    "    bulan = {\n",
+    "        'januari': 'January', 'jan': 'January',\n",
+    "        'februari': 'February', 'feb': 'February',\n",
+    "        'maret': 'March', 'mar': 'March',\n",
+    "        'april': 'April', 'apr': 'April',\n",
+    "        'mei': 'May', 'may': 'May',\n",
+    "        'juni': 'June', 'jun': 'June',\n",
+    "        'juli': 'July', 'jul': 'July',\n",
+    "        'agustus': 'August', 'agu': 'August', 'aug': 'August',\n",
+    "        'september': 'September', 'sep': 'September',\n",
+    "        'oktober': 'October', 'okt': 'October', 'oct': 'October',\n",
+    "        'november': 'November', 'nov': 'November',\n",
+    "        'desember': 'December', 'des': 'December', 'dec': 'December'\n",
+    "    }\n",
+    "\n",
+    "    def fix_date(x):\n",
+    "        if pd.isna(x):\n",
+    "            return x\n",
+    "\n",
+    "        s = str(x).strip()\n",
+    "        # Bersihkan tanda baca dan kutipan\n",
+    "        for ch in [\",\", \".\", \"'\", \"‘\", \"’\", \"–\", \"-\", \"/\", \"\\\\\"]:\n",
+    "            s = s.replace(ch, \" \")\n",
+    "        s = \" \".join(s.split())\n",
+    "\n",
+    "        # Ubah nama bulan ke Inggris\n",
+    "        s = \" \".join([bulan.get(w.lower(), w) for w in s.split()])\n",
+    "\n",
+    "        # Tangani format \"YYYY DD MMM\" atau \"YYYY, DD MMM\"\n",
+    "        parts = s.split()\n",
+    "        if len(parts) == 3 and parts[0].isdigit() and len(parts[0]) == 4:\n",
+    "            y, d, m = parts\n",
+    "            s = f\"{d} {m} {y}\"\n",
+    "\n",
+    "        # Tangani format tahun dua digit misal '24\n",
+    "        s = s.replace(\"‘\", \"\").replace(\"’\", \"\").strip()\n",
+    "        s = s.replace(\"'\", \"\")\n",
+    "\n",
+    "        # Coba parsing berbagai kemungkinan format\n",
+    "        for dayfirst in (True, False):\n",
+    "            dt = pd.to_datetime(s, errors='coerce', dayfirst=dayfirst, infer_datetime_format=True)\n",
+    "            if pd.notna(dt):\n",
+    "                return dt.strftime(\"%d-%m-%Y\")\n",
+    "\n",
+    "        # Jika gagal, coba paksa perbaikan dengan urutan lain\n",
+    "        try:\n",
+    "            dt = pd.to_datetime(s, format=\"%Y %m %d\", errors='coerce')\n",
+    "            if pd.notna(dt):\n",
+    "                return dt.strftime(\"%d-%m-%Y\")\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "\n",
+    "        # Jika tetap gagal, kembalikan nilai asli agar tidak hilang\n",
+    "        return x\n",
+    "\n",
+    "    # Cari kolom yang mengandung tanggal\n",
+    "    for col in df.columns:\n",
+    "        sample = df[col].dropna().astype(str).head(20)\n",
+    "        if sample.apply(lambda x: pd.to_datetime(x, errors='coerce')).notna().sum() >= 3:\n",
+    "            df[col] = df[col].apply(fix_date)\n",
+    "\n",
+    "    # Simpan hasil ke file output dengan format sama\n",
+    "    df.to_excel(output_xlsx_path, index=False, sheet_name='transaksi')\n"
+   ]
   }
  ],
  "metadata": {
